# FacebowFileReader

./: .gitignore  CMakeLists.txt  FacebowFileReader.hpp  ReadMe.md  main.cpp  pybind11_opencv.hpp  python-bindings.cpp  setup.py  vcpkg.json
.github/workflows/: ci-build-ubuntu.yml  ci-build-windows.yml
include/mimetrik/: FacebowFileReader.hpp
share/scripts/: cpp_pretty.json  json-tester.py
test/: FacebowFileReaderTest.cpp
test/resources/: frame0  frame0Meta.json  test_video_invalid_version.mfba  test_video_valid.mfba
